--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/rashid.png" alt="Rashid Profile Picture"></td>
+      <td><img src="./images/rashid.png" alt="Rashid Profile Picture"></td>
       <td>
         <h1>Rashid Maqbool</h1>
         <p><em>Founder & CEO <strong><a href="https://mrbrandpk.com/">MrBrandPK</a></strong></em></p>
