--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Rashid's Personal Site</title>
 </head>
-<body style="background-color: #D6E4E5;">
+<body>
   <table cellspacing="20">
     <tr>
       <td><img src="./images/rashid.png" alt="Rashid Profile Picture"></td>
